# 3D-plane-segmentation

./: .gitignore  README.md  runbeforedocker.sh
CAPE/: Dockerfile  README.md  runbeforedocker.sh
CAPE/CAPE/: CAPE.cpp  CAPE.h  CAPE.sln  CAPE.vcxproj  CAPE.vcxproj.filters  CMakeLists.txt  CylinderSeg.cpp  CylinderSeg.h  Histogram.cpp  Histogram.h  Params.cpp  Params.h  PlaneSeg.cpp  PlaneSeg.h  run_cape_offline.cpp  write_labels.cpp  write_labels.h  write_labels.hpp
DDPFF/: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.raw  LICENSE  README.md  main.cpp  styles.css
DDPFF/app/: CMakeLists.txt  app.cpp  app.h  app.ui  main.cpp
DDPFF/cmake/: FindQGLViewer.cmake
DDPFF/conf/: config10.conf  config5.conf  configABW.conf
DDPFF/control/: CMakeLists.txt
DDPFF/control/include/control/: CameraControl.h  CameraControlLoop.h  CameraLoop.h  State.h  StateUtil.h
DDPFF/control/src/: CameraControl.cpp  CameraControlLoop.cpp  CameraLoop.cpp  State.cpp  StateUtil.cpp
DDPFF/docker/: args.sh  init_qtcreator_integrated.sh  init_qtcreator_nvidia.sh  init_shell_integrated.sh  init_shell_nvidia.sh  integrated.Dockerfile  nvidia.Dockerfile  qt.Dockerfile  start_qtcreator_integrated.sh  start_qtcreator_nvidia.sh  start_shell_integrated.sh  start_shell_nvidia.sh
DDPFF/globals/: CMakeLists.txt
DDPFF/globals/include/globals/: Command.h  Config.h  constants.h
DDPFF/globals/src/: Command.cpp  Config.cpp
DDPFF/gui/: CMakeLists.txt
DDPFF/gui/include/gui/: CameraViewWidget.h  ConfigWidget.h  MessageQueue.h  OpenGLSceneWidget.h  OpenGLViewWidget.h
DDPFF/gui/src/: CameraViewWidget.cpp  ConfigWidget.cpp  MessageQueue.cpp  OpenGLSceneWidget.cpp  OpenGLViewWidget.cpp
DDPFF/output/: planes.txt
DDPFF/rep/: CMakeLists.txt
DDPFF/rep/include/rep/: DDPFF.h  Representation.h  planarrepresentation.h
DDPFF/rep/src/: DDPFF.cpp
DDPFF/run/: ascii.py  colorpcd.py  run.sh
DDPFF/scenes/: CMakeLists.txt
DDPFF/scenes/include/scenes/: primitive.h  scene.h  scenerender.h
DDPFF/scenes/src/: primitive.cpp  scene.cpp  scenerenderer.cpp
DDPFF/scripts/: build_cloud_from_planes.py  preprocess_cloud.py  run.sh
DDPFF/utils/: CMakeLists.txt
DDPFF/utils/include/utils/: ColorUtil.h  GLlib.h  Pose6D.h  Statistics.h  StopWatch.h  StopWatchLinux.h  Timer.h  TimerLinux.h  bonn.h  camerautils.h  eigenutils.h  plane.h  segcomp.h  tum.h  utilities.h
DDPFF/utils/src/: ColorUtil.cpp  GLlib.cpp  Statistics.cpp  StopWatch.cpp  StopWatchLinux.cpp  Timer.cpp  TimerLinux.cpp  bonn.cpp  camerautils.cpp  eigenutils.cpp  segcomp.cpp  tum.cpp
PCL_ConnectedComponents/: CC_Dockerfile  CMakeLists.txt  README.md  main.cpp
PCL_ConnectedComponents/scripts/: build_colored_cloud.py  run.py  save_as_npy.py
PCL_ConnectedComponents/src/: ConnectedComponents.cpp  ConnectedComponents.h  ConnectedComponents.hpp
PCL_RegionGrowing/: CMakeLists.txt  Dockerfile  README.md  main.cpp
PCL_RegionGrowing/generatedClusters/: cloud_cluster_0.pcd
PCL_RegionGrowing/scripts/: build_colored_cloud.py  run.py  save_as_npy.py
PCL_RegionGrowing/src/: RegionGrowing.cpp  RegionGrowing.h
STORM-IRIT/: CMakeLists.txt  Dockerfile  README.md  run.sh  runbefordocker.sh
STORM-IRIT/CGAL/auxiliary/: cgal_create_cmake_script.1
STORM-IRIT/CGAL/demo/Arrangement_on_surface_2/: ArrangementCurveInputCallback.h  ArrangementDemoGraphicsView.h  ArrangementDemoPropertiesDialog.h  ArrangementDemoTab.h  ArrangementSegmentInputCallback.h  Callback.h  Conic_reader.h  CurveGraphicsItem.h  DeleteCurveCallback.h  DeleteCurveMode.h  DeleteCurveModeItemEditor.h  EnvelopeCallback.h  FillFaceCallback.h  GraphicsViewCurveInput.h  GraphicsViewSegmentInput.h  ISnappable.h  MergeEdgeCallback.h  NewTabDialog.h  OverlayDialog.h  PointLocationCallback.h  PointsGraphicsItem.h  PropertyValueDelegate.h  SplitEdgeCallback.h  VerticalRayGraphicsItem.h  VerticalRayShootCallback.h
STORM-IRIT/CGAL/demo/Linear_cell_complex/: MainWindow.h  Viewer.h  import_moka.h  typedefs.h
STORM-IRIT/CGAL/demo/Segment_Delaunay_graph_2/: svd-typedefs.h
STORM-IRIT/CGAL/examples/Filtered_kernel/: Cartesian_I.h
STORM-IRIT/CGAL/examples/Linear_cell_complex/: basic_viewer.h
STORM-IRIT/CGAL/examples/Surface_mesh/: draw_surface_mesh_small_faces.h
STORM-IRIT/CGAL/include/CGAL/: AABB_face_graph_triangle_primitive.h  AABB_halfedge_graph_segment_primitive.h  AABB_polyhedral_oracle.h  AABB_polyhedron_segment_primitive.h  AABB_polyhedron_triangle_primitive.h  AABB_primitive.h  AABB_segment_primitive.h  AABB_traits.h  AABB_tree.h  AABB_triangle_primitive.h  (+1128 more)
STORM-IRIT/app/: pdpcComputeMultiScaleFeatures.cpp  pdpcPostProcess.cpp  pdpcSegmentation.cpp
STORM-IRIT/scripts/: convert_ply.py  convert_txt.py  preprocess_cloud.py  run.sh
TAMS/: CMakeLists.txt  README.md  main.cpp
TAMS/data_acquisition/ptu/include/ptu/: cpiver.h  linuxser.h  opcodes.h  ptu.h
TAMS/data_acquisition/ptu/src/: linuxser.cpp  main.cpp  ptu.cpp
TAMS/scripts/: build_colored_cloud.py  run.py  save_as_npy.py
TAMS/src/: common.cc  subwindow_region_growing.cc
TAMS/src/headers/: common.h  subwindow_region_growing.h
cpf_segmentation/: Dockerfile  README.md  runbeforedocker.sh
cpf_segmentation/gco-v3.0/: GCoptimization.cpp  LinkedBlockList.cpp  graph.cpp  maxflow.cpp
cpf_segmentation/include/gco-v3.0/: GCoptimization.h  graph.h
cpf_segmentation/scripts/: run.sh  store_labels.py
cpf_segmentation/src/: segmentation_test.cpp
peac/: Dockerfile  README.md
peac/cpp/: CMakeLists.txt  pcd_recorder.cpp  plane_fitter.cpp  plane_fitter_pcd.cpp  plane_fitter_pcd.ini  plane_fitter_pcd.tls.ini
peac/include/: AHCPlaneFitter.hpp  AHCPlaneSeg.hpp  eig33sym.hpp
peac/matlab/: Kinect.m  createSegImg.m  fitAHCPlane.m  fitPlane.m  getDefaultAHCFitterparams.m  kinect_ahc.m  kinect_record.m  myPseudoColor.m  plotColorPointCloud.m  projectToXY.m  reportAHCPlaneFitterParams.m  setAHCPlaneFitterParams.m  splitXYZ.m  viewSeg.m  xyz2pts.m
peac/matlab/mex/: makefile.m  mxEig33Sym.cpp  mxEig33Sym.m  mxFitAHCPlane.cpp  mxFitAHCPlane.m
peac/scripts/: run.sh  store_colors.py
utils/: Dockerfile  README.md  pcl_Dockerfile
(+2075 files in other folders)
